v. 0.17.25
- adjust bobExtended electronics ingredients
- move some recipe to bob's electrolysis machine


v. 0.17.24
- angels machine now use more varient pipe
- nerf evolution nullifier
- [WIP] init py compatibility.(not have effect yet)

v. 0.17.23
- higher tier science pack need to craft in higher tier assembling machine

v. 0.17.22
- improve addition evolution reduce function
- most recipe now use more interesting material to craft

v. 0.17.21
- add green algae to solid alginic acid
- fix higher tier bobextended underground belt don't unlock
- adjust bobextended electronics recipe 
- adjust clay coke recipe
- add battery to some science
- add evolution nullifier
- add recipe cellulose fiber from wood plup

v. 0.17.20
- decrease overall cost in harder logistic
- add time evolution reduction
- balanced recipe for angel-bio compatibility
- balanced angels storage tank
- remove redundant valve from angels and advanced fluid handling

v. 0.17.19
- fix electric-energy-accumulators-1 => electric-energy-accumulators
- add function to get momo sci category
- add temp fix for MSP-9

v. 0.17.18
- fix recipe missing machine

v. 0.17.17
- fix missing recipe

v. 0.17.16
- fix error when player not have recipe-category bob-distillery
- add complex crafting for angel bio process science pack
- fix missing science vial in recipe when science cost tweak are enabled

v. 0.17.15
- bobextended electronics now use progress electronics and expensive wire settings
- add harder recipe for logistics

v. 0.17.14
- improve bobextended frame 1 unlock function 

v. 0.17.13
- remove tin-plate from transport-belt if player don't have basic-transport-belt
- balance vial recipe again
- fix angels-plate-silicon

v. 0.17.12
- balanced exporation token recipe from wood
- basic structure components now unlock at steel tech 

v. 0.17.11
- fix unable to craft memory unit 1
- balance vial recipe

v. 0.17.10
- fix when player don't have MSP-30
- advanced fluid handling can be unlock early